--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-portfolio",
-  "homepage": "https://homeserviceshub.github.io/my-portfolio_website/",
+  "homepage": "https://homeserviceshub.github.io/my-portfolio_website",
   "private": true,
   "version": "0.0.0",
   "type": "module",
